--- a/decompiler/config/jak1/jak1_config.jsonc
+++ b/decompiler/config/jak1/jak1_config.jsonc
@@ -113,14 +113,14 @@
   // turn this on to extract level background graphics data as .fr3 files in out/<game>/fr3
   "levels_extract": true,
   // turn this on if you want extracted levels to be saved out as .glb files in decompiler_out/<game>/levels
-  "rip_levels": false,
+  "rip_levels": true,
   // should we also extract collision meshes to the .fr3 files?
   // these can be displayed in-game with the OpenGOAL collision renderer
   "extract_collision": true,
   // turn this on if you want extracted level collision to be saved as .obj files in decompiler_out/<game>/collision
-  "rip_collision": false,
+  "rip_collision": true,
   // save game textures as .png files to decompiler_out/<game>/textures
-  "save_texture_pngs": false,
+  "save_texture_pngs": true,
 
   // whether or not to dump out streamed audio files to decompiler_out/<game>/audio
   "rip_streamed_audio": false,
