--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,4 +1,7 @@
 # Set a more convenient ARM flag
+include_directories(third-party/libsm64)
+
+
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
     set(ARM64_ARCH TRUE)
     message(STATUS "ARM64 architecture detected")
@@ -313,6 +316,8 @@ add_subdirectory(sound)
 
 # we build the runtime as a static library.
 add_library(runtime STATIC ${RUNTIME_SOURCE} "../third-party/glad/src/glad.c")
+target_include_directories(runtime PRIVATE ${CMAKE_SOURCE_DIR}/third-party)
+
 
 target_link_libraries(runtime common fmt SDL3::SDL3 imgui discord-rpc sound stb_image libco libcurl)
 if(WIN32)
@@ -322,7 +327,19 @@ else()
 endif()
 
 add_executable(gk main.cpp)
-target_link_libraries(gk runtime)
+
+# if(WIN32)
+#     set_target_properties(gk PROPERTIES VS_DPI_AWARE "PerMonitor")
+
+#     add_custom_command(TARGET gk POST_BUILD
+#         COMMAND ${CMAKE_COMMAND} -E copy_if_different
+#             ${CMAKE_SOURCE_DIR}/third-party/libsm64/sm64.dll
+#             $<TARGET_FILE_DIR:gk>)
+# endif()
+
+target_include_directories(gk PRIVATE ${CMAKE_SOURCE_DIR}/third-party)
+target_link_directories(gk PRIVATE ${CMAKE_SOURCE_DIR}/third-party/libsm64/lib)
+target_link_libraries(gk runtime libsm64)
 if(WIN32)
     set_target_properties(gk PROPERTIES VS_DPI_AWARE "PerMonitor")
 endif()
