--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,9 @@
     "editor.wordBasedSuggestions": "matchingDocuments",
     "editor.snippetSuggestions": "top"
   },
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "files.associations": {
+    "vector": "cpp",
+    "xiosbase": "cpp"
+  }
 }
