--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -315,6 +315,7 @@ add_subdirectory(sound)
 
 # we build the runtime as a static library.
 add_library(runtime STATIC ${RUNTIME_SOURCE} "../third-party/glad/src/glad.c")
+target_include_directories(runtime PRIVATE ${CMAKE_SOURCE_DIR}/third-party)
 
 target_link_libraries(runtime common fmt SDL3::SDL3 imgui discord-rpc sound stb_image libco libcurl)
 if(WIN32)
