--- a/.github/workflows/release-pipeline.yaml
+++ b/.github/workflows/release-pipeline.yaml
@@ -25,7 +25,7 @@ jobs:
     steps:
       # Docs - https://github.com/mathieudutour/github-tag-action
       - name: Bump Version and Push Tag
-        if: github.repository == 'open-goal/jak-project'
+        if: github.repository == 'OpenGOAL-Mods/OG-Mod-Base'
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
         with:
@@ -92,7 +92,6 @@ jobs:
 
   # Upload the Artifacts
   upload_artifacts:
-    if: github.repository == 'open-goal/jak-project'
     needs:
       - cut_release
       - build_windows_clang
@@ -104,7 +103,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ needs.cut_release.outputs.new_tag }}
+          fetch-tags: true
+          fetch-depth: 0
 
       - name: Prepare Artifact Folder
         run: mkdir -p ./ci-artifacts/final
@@ -162,12 +162,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          TAG_VAL=${{ needs.cut_release.outputs.new_tag }}
-          gh release upload "${TAG_VAL}" ${{ github.WORKSPACE }}/ci-artifacts/final/* --repo open-goal/jak-project --clobber
+          gh release upload ${{ needs.cut_release.outputs.new_tag }} ${{ github.WORKSPACE }}/ci-artifacts/final/* --repo ${{ github.repository }} --clobber
 
       - name: Publish Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          TAG_VAL=${{ needs.cut_release.outputs.new_tag }}
-          gh release edit ${TAG_VAL} --draft=false --repo open-goal/jak-project
+          gh release edit ${{ needs.cut_release.outputs.new_tag }} --draft=false --repo ${{ github.repository }}
