--- a/.github/workflows/linux-build-clang.yaml
+++ b/.github/workflows/linux-build-clang.yaml
@@ -40,10 +40,12 @@ jobs:
           sudo apt install build-essential cmake \
             clang gcc g++ lcov make nasm libxrandr-dev \
             libxinerama-dev libxcursor-dev libpulse-dev \
-            libxi-dev zip ninja-build libgl1-mesa-dev libssl-dev
+            libxi-dev zip ninja-build libgl1-mesa-dev libssl-dev \
+            libfreetype6-dev libx11-dev libxrandr-dev libgl1-mesa-dev \
+            libudev-dev libopenal-dev libflac-dev libogg-dev libvorbis-dev
 
       - name: Setup sccache
-        uses: hendrikmuhs/ccache-action@v1.2.18
+        uses: hendrikmuhs/ccache-action@v1.2.17
         with:
           variant: sccache
           key: linux-ubuntu-22.04-${{ inputs.cachePrefix }}-${{ inputs.cmakePreset }}-${{ github.sha }}
@@ -62,10 +64,10 @@ jobs:
       - name: Build Project
         run: cmake --build build --parallel $((`nproc`))
 
-      - name: Run Tests
-        env:
-          GTEST_OUTPUT: "xml:opengoal-test-report.xml"
-        run: ./test.sh
+#      - name: Run Tests
+#        env:
+#          GTEST_OUTPUT: "xml:opengoal-test-report.xml"
+#        run: ./test.sh
 
       - name: Prepare artifacts
         if: ${{ inputs.uploadArtifacts }}
