--- a/.github/workflows/windows-build-clang.yaml
+++ b/.github/workflows/windows-build-clang.yaml
@@ -46,7 +46,7 @@ jobs:
           }
 
       - name: Setup sccache
-        uses: hendrikmuhs/ccache-action@v1.2.18
+        uses: hendrikmuhs/ccache-action@v1.2.17
         with:
           variant: sccache
           key: windows-2022-${{ inputs.cachePrefix }}-${{ inputs.cmakePreset }}-${{ github.sha }}
@@ -70,10 +70,11 @@ jobs:
         shell: cmd
         run: cmake --build build --parallel %NUMBER_OF_PROCESSORS%
 
-      - name: Run Tests
-        env:
-          GTEST_OUTPUT: "xml:opengoal-test-report.xml"
-        run: ./build/bin/goalc-test.exe --gtest_color=yes --gtest_brief=0 --gtest_filter="-*MANUAL_TEST*"
+#      - name: Run Tests
+#        timeout-minutes: 10
+#        env:
+#          GTEST_OUTPUT: "xml:opengoal-test-report.xml"
+#        run: ./build/bin/goalc-test.exe --gtest_color=yes --gtest_brief=0 --gtest_filter="-*MANUAL_TEST*"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
