--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -109,6 +109,7 @@ set(RUNTIME_SOURCE
         kernel/jak1/fileio.cpp
         kernel/jak1/kboot.cpp
         kernel/jak1/mario1.cpp
+        kernel/jak1/audio.cpp
         kernel/jak1/kdgo.cpp
         kernel/jak1/klink.cpp
         kernel/jak1/klisten.cpp
